syntax = "proto3";

package tendermint.p2p;

option go_package = "github.com/sei-protocol/sei-chain/sei-tendermint/proto/tendermint/p2p";

message PexAddress {
  reserved 2, 3; // See https://github.com/tendermint/spec/pull/352
  string url = 1;
}

message PexRequest {}

message PexResponse {
  repeated PexAddress addresses = 1;
}

message PexMessage {
  reserved 1, 2; // See https://github.com/tendermint/spec/pull/352
  oneof sum {
    PexRequest pex_request = 3;
    PexResponse pex_response = 4;
  }
}
